--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,10 +1,10 @@
-{% extends "home/base.html" %} 
-{% block top %} 
+{% extends "home/base.html" %}
+{% block top %}
 <div class="jumbotron text-center " style="margin-bottom:0; ">
   <h1>Give hope  <span class="fa fa-heart"></span> </h1>
   <p>Idea to life , point was to lose control  </p>
 </div>
-{% endblock %} 
+{% endblock %}
 
 {% block carasol %}
 
@@ -20,21 +20,21 @@
       <div class="carousel-caption">
         <h3>Los Angeles</h3>
         <p>We had such a great time in LA!</p>
-      </div>   
+      </div>
     </div>
     <div class="carousel-item">
       <img src="https://images.unsplash.com/photo-1480714378408-67cf0d13bc1b?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Chicago" width="1100" height="500">
       <div class="carousel-caption">
         <h3>Chicago</h3>
         <p>Thank you, Chicago!</p>
-      </div>   
+      </div>
     </div>
     <div class="carousel-item">
       <img src="https://images.unsplash.com/photo-1514565131-fce0801e5785?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=824&q=80" alt="New York" width="1100" height="500">
       <div class="carousel-caption">
         <h3>New York</h3>
         <p>We love the Big Apple!</p>
-      </div>   
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#app_slider" data-slide="prev">
@@ -49,7 +49,7 @@
 {% block content %}
     {% for app in apps %}
         <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ app.author.profile.image.url }}">
+          <img class="rounded-circle article-img" src="{{app.author.profile.image.url }}">
           <div class="media-body">
             <div class="article-metadata">
              <a class="mr-2" href="{% url 'profile' %}">{{app.author}}</a>
@@ -60,5 +60,10 @@
           </div>
         </article>
     {% endfor %}
+
+
+<button onclick="window.location.href='{% url 'app-create' %}'" type="button" class="btn btn-outline-success btn-lg btn-block">Add new blog </button>
+
+
 {% endblock content %}
 
